[package]
name = "wasm-nes"
version = "0.1.0"
authors = ["Lucien Le Roux <rshn.kabu@gmail.com>"]
edition = "2018"

[lib]
name = "wasm_nes"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
